# ZPR

./: Agario.cc  Agario.cpp  CMakeLists.txt  README.md  abc.txt  game_over.png:Zone.Identifier  install.sh  myapp  new  run.sh  zadanie.cpp
include/: BasicWindow.h  Bot.h  Button.h  Game.h  GameOver.h  Interface.h  Player.h  StaticPoints.h
src/: BasicWindow.cc  BasicWindow.cpp  Bot.cc  Bot.cpp  Button.cc  Button.cpp  Game.cc  Game.cpp  GameOver.cc  GameOver.cpp  Interface.cc  Interface.cpp  Player.cc  Player.cpp  StaticPoints.cc  StaticPoints.cpp
tests/: BotTest.cc  ButtonTest.cc  ButtonTest.cpp  GameTest.cc  GameTest.cpp  PlayerTest.cc  PlayerTest.cpp  StaticPointsTest.cc  StaticPointsTest.cpp
